--- a/Databricks_Bootcamp/03-Autoloader/describe.ipynb
+++ b/Databricks_Bootcamp/03-Autoloader/describe.ipynb
@@ -10,32 +10,15 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "2d227e1d-0263-400c-984e-7cbfd8b30691",
+     "nuid": "e471163d-1a05-4231-a375-fa175452729f",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
     }
    },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "7f2f45c4-bccd-4fcc-a3d8-899991e86a92",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
    "source": [
-    "# **Volumes**"
+    "DESCRIBE table dba.bronze.copyintotbl"
    ]
   },
   {
@@ -48,7 +31,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "20b7b878-098d-4bc8-87c8-69bd64126289",
+     "nuid": "fccd379e-69f8-4efc-b78c-6bf615afd463",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -56,8 +39,7 @@
    },
    "outputs": [],
    "source": [
-    "%sql\n",
-    "create catalog if not exists dba;"
+    "DESCRIBE EXTENDED dba.bronze.copyintotbl"
    ]
   },
   {
@@ -70,7 +52,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "1092cbde-2582-4359-bdae-be0933b83968",
+     "nuid": "71e259f3-7bae-4fed-a332-81225ac71338",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -78,8 +60,7 @@
    },
    "outputs": [],
    "source": [
-    "use catalog dba;\n",
-    "create schema if not exists  bronze;"
+    "DESCRIBE FORMATTED dba.bronze.copyintotbl"
    ]
   },
   {
@@ -92,7 +73,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "42c006dd-b8b8-4867-a503-f12cd9e754fd",
+     "nuid": "90187c71-186c-4fb1-bb80-37dfa3110761",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -100,9 +81,7 @@
    },
    "outputs": [],
    "source": [
-    "use catalog dba;\n",
-    "use schema bronze;\n",
-    "create volume if not exists autovol;"
+    "DESCRIBE DETAIL dba.bronze.copyintotbl"
    ]
   },
   {
@@ -115,7 +94,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "24e0fc24-5543-4fa7-81c1-9f1b28e929cb",
+     "nuid": "5e3f8471-21bd-4621-8e46-fc534922e4dc",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -123,8 +102,7 @@
    },
    "outputs": [],
    "source": [
-    "%sql \n",
-    "CREATE VOLUME IF NOT EXISTS dba.bronze.bronze_volume\n"
+    "DESCRIBE HISTORY dba.bronze.copyintotbl"
    ]
   },
   {
@@ -137,7 +115,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "9c96581b-f290-4ce6-8fcc-7d7d67ce6dd7",
+     "nuid": "b1cb02e9-156e-4699-8f05-1532b22ee882",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -145,27 +123,7 @@
    },
    "outputs": [],
    "source": [
-    "%sql\n",
-    "SELECT * FROM csv.`/Volumes/dba/bronze/bronze_volume/sales/fact_sales.csv`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "8eb2ac79-14cd-44ec-aa09-12b2801beda4",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "# **DBUTILS**"
+    "DESCRIBE EXTENDED dba"
    ]
   },
   {
@@ -178,7 +136,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "c3c7161e-e8aa-4a51-8d5f-e0124dd85eb0",
+     "nuid": "3a02241d-ec67-485d-a2c3-ab8e6a07ccd4",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -186,8 +144,7 @@
    },
    "outputs": [],
    "source": [
-    "%python\n",
-    "dbutils.help()"
+    "DESCRIBE schema dba"
    ]
   },
   {
@@ -200,7 +157,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "52b091db-f1bd-49bc-8ec1-216af113a6a3",
+     "nuid": "cfeeae7a-e537-489c-9bfe-1052ad146729",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -208,8 +165,7 @@
    },
    "outputs": [],
    "source": [
-    "%python\n",
-    "dbutils.fs.ls(\"/Volumes/dba/bronze/bronze_volume/sales/\")"
+    "select * from dba.bronze.copyintotbl version as of 1"
    ]
   },
   {
@@ -222,7 +178,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "08d482a7-8e7f-42f4-9ea6-ca4a1be7a68f",
+     "nuid": "f348cfed-ae0b-4c67-a453-cc3a5a1b673b",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -230,8 +186,7 @@
    },
    "outputs": [],
    "source": [
-    "%python\n",
-    "dbutils.fs.mkdirs(\"/Volumes/dba/bronze/bronze_volume/customers\")"
+    "delete from dba.bronze.copyintotbl where order_id != 1"
    ]
   },
   {
@@ -244,7 +199,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "108f89b9-2069-40cd-9245-7019fd5c9ae4",
+     "nuid": "df36cdb4-c10e-4236-95fd-2c269068f3ad",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -252,8 +207,7 @@
    },
    "outputs": [],
    "source": [
-    "%python\n",
-    "dbutils.fs.cp(\"/Volumes/dba/bronze/bronze_volume/sales/\",\"/Volumes/dba/bronze/bronze_volume/customers/\",True)"
+    "select * from dba.bronze.copyintotbl"
    ]
   },
   {
@@ -266,16 +220,22 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "b9466052-ff24-4089-a17d-20d9713f7430",
+     "nuid": "19034085-ff28-4d16-8b92-8e9b38a838d4",
      "showTitle": false,
-     "tableResultSettingsMap": {},
+     "tableResultSettingsMap": {
+      "0": {
+       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1767027134415}",
+       "filterBlob": null,
+       "queryPlanFiltersBlob": null,
+       "tableResultIndex": 0
+      }
+     },
      "title": ""
     }
    },
    "outputs": [],
    "source": [
-    "%python\n",
-    "dbutils.fs.rm(\"/Volumes/dba/bronze/bronze_volume/customers/fact_sales.csv\")"
+    "describe history dba.bronze.copyintotbl"
    ]
   },
   {
@@ -288,7 +248,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "d193b23d-8ff6-465f-9e10-c5bc85b84556",
+     "nuid": "10b10cde-f3a8-478f-8270-8e4a906a0428",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -296,8 +256,7 @@
    },
    "outputs": [],
    "source": [
-    "%python\n",
-    "dbutils.fs.put(\"/Volumes/dba/bronze/bronze_volume/customers/test.txt\",\"True\")"
+    "select * from dba.bronze.copyintotbl @v3"
    ]
   },
   {
@@ -310,7 +269,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "46f2d254-9eca-4598-a2b5-044729954c56",
+     "nuid": "fd14e534-ec38-410c-a774-37ecfcdd7f71",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -318,8 +277,7 @@
    },
    "outputs": [],
    "source": [
-    "%python\n",
-    "dbutils.fs.put(\"/Volumes/dba/bronze/bronze_volume/customers/test.py\",\"print(Hello Ansh Lamba)\",True)"
+    "RESTORE dba.bronze.copyintotbl to version as of 2"
    ]
   },
   {
@@ -332,7 +290,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "bd8401b9-4394-4dde-92f5-46dfb1630ca0",
+     "nuid": "29863c95-459c-4364-a53d-919bdfee3228",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -340,9 +298,7 @@
    },
    "outputs": [],
    "source": [
-    "%python\n",
-    "all_items = dbutils.fs.ls(\"/Volumes/dba/bronze/bronze_volume/customers/\")\n",
-    "all_items"
+    "describe detail dba.bronze.copyintotbl"
    ]
   },
   {
@@ -355,7 +311,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "6bafa82e-b8d0-45fc-9293-7f5ec9182a22",
+     "nuid": "aad0a76a-bef5-4c06-902d-17767148e098",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -363,9 +319,7 @@
    },
    "outputs": [],
    "source": [
-    "%python\n",
-    "file_names = [i.name for i in all_items]\n",
-    "file_names"
+    "select * from dba.bronze.copyintotbl"
    ]
   },
   {
@@ -378,7 +332,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "7ac6d0ee-1de9-4cd5-bb37-ce6e0387a8ec",
+     "nuid": "c4b3cb6c-c19d-4dea-9626-76d10abddcc1",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -386,9 +340,7 @@
    },
    "outputs": [],
    "source": [
-    "%python\n",
-    "for i in file_names:\n",
-    "    dbutils.fs.rm(f\"/Volumes/dba/bronze/bronze_volume/customers/{i}\")"
+    "select * from dba.bronze.copyintotbl"
    ]
   },
   {
@@ -401,7 +353,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "f3f5cd5b-e0bf-488d-92db-9d30fbc87af9",
+     "nuid": "9dea4ea7-a718-4b85-98a5-5c0147a7c71d",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -409,8 +361,8 @@
    },
    "outputs": [],
    "source": [
-    "%python\n",
-    "dbutils.widgets.text(\"par1\",\"\")"
+    "create table dba.bronze.clone_copyintotbl\n",
+    "deep clone dba.bronze.copyintotbl"
    ]
   },
   {
@@ -423,7 +375,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "dd1db9b9-4fbb-4d4b-bd6a-df8dab08a9e8",
+     "nuid": "b0ad824b-9287-441b-beb4-9fea5ab8afaf",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -431,9 +383,7 @@
    },
    "outputs": [],
    "source": [
-    "%python\n",
-    "par1_value = dbutils.widgets.get(\"par1\")\n",
-    "par1_value"
+    "describe history dba.bronze.clone_copyintotbl"
    ]
   },
   {
@@ -446,14 +396,80 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "8e80ad7c-c4c1-4adf-8bbb-d7548610be36",
+     "nuid": "4019b42a-8b8d-477f-8c12-4fff26a8817a",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "select * from dba.bronze.clone_copyintotbl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "7390272d-a7cc-4cbe-9edc-d3173ed94fda",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "create table dba.bronze.shallow_clone_copyintotbl\n",
+    "shallow clone dba.bronze.copyintotbl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "a4d993a0-8cc9-410b-9515-03d4ee09e2b2",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "describe history dba.bronze.shallow_clone_copyintotbl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "fdc4c488-a94b-4f3a-8cd1-21216a4148d9",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "select * from dba.bronze.shallow_clone_copyintotbl"
+   ]
   }
  ],
  "metadata": {
@@ -469,35 +485,8 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "01-bronze",
-   "widgets": {
-    "par1": {
-     "currentValue": "",
-     "nuid": "28a664af-32c7-415b-8667-d41dbdc15a14",
-     "typedWidgetInfo": {
-      "autoCreated": false,
-      "defaultValue": "",
-      "label": null,
-      "name": "par1",
-      "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
-      },
-      "parameterDataType": "String"
-     },
-     "widgetInfo": {
-      "widgetType": "text",
-      "defaultValue": "",
-      "label": null,
-      "name": "par1",
-      "options": {
-       "widgetType": "text",
-       "autoCreated": false,
-       "validationRegex": null
-      }
-     }
-    }
-   }
+   "notebookName": "describe",
+   "widgets": {}
   },
   "language_info": {
    "name": "sql"
